--- a/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
+++ b/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
@@ -203,7 +203,7 @@ The project provides a `docker-compose.yml` file tha starts Redis with all modul
 
 #### Step 7. Add Redis Database name, Endpoint URL and password
 
-Assuming that you already have Redis server and database up and running in your infrastructure.
+We assume that you already have a Redis server up and running in your infrastructure.
 You can also leverage Redis Enterprise Cloud as showcased in the below example.
 
 ![grafana](grafana_datasource4.png)
