--- a/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
+++ b/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
@@ -204,7 +204,7 @@ The project provides a `docker-compose.yml` file tha starts Redis with all modul
 #### Step 7. Add Redis Database name, Endpoint URL and password
 
 We assume that you already have a Redis server up and running in your infrastructure.
-You can also leverage Redis Enterprise Cloud as showcased in the below example.
+You can also leverage Redis Enterprise Cloud as shown below:
 
 ![grafana](grafana_datasource4.png)
 
