--- a/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
+++ b/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
@@ -20,7 +20,7 @@ Redis Explorer plugin is the latest plugin in the Grafana Labs that adds support
 
 ![my image](redisexplorer.png)
 
-Redis Explorer allows you to create the below dashboard over Grafana:
+Redis Explorer allows you to create the following dashboard over Grafana:
 
 #### Enterprise Clusters Dashboard 
 
