--- a/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
+++ b/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
@@ -18,7 +18,7 @@ Redis Enterprise clusters are a set of nodes, typically two or more, providing d
 Redis Explorer plugin is the latest plugin in the Grafana Labs that adds support for Redis Enterprise software. It is a plugin for Grafana that connects to Redis Enterprise software clusters using REST API. It provides application pages to add Redis Data Sources for managed databases and dashboards to see cluster configuration.
 
 
-![my image](redisexplorer.png)
+![The Redis Explorer plugin](redisexplorer.png)
 
 Redis Explorer allows you to create the following dashboard over Grafana:
 
