--- a/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
+++ b/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
@@ -88,7 +88,7 @@ Redis Application plugin and Redis Data Source will be auto-installed as depende
 
 ### Step 4. Using Docker 
 
-You can even run Redis Explorer plugin using Docker
+You can even run Redis Explorer plugin using Docker:
 
  ```bash
   docker run -p 3000:3000 --name=grafana -e "GF_INSTALL_PLUGINS=redis-explorer-app" grafana/grafana
