--- a/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
+++ b/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
@@ -26,7 +26,7 @@ Redis Explorer allows you to create the following dashboard over Grafana:
 
 Enterprise Clusters dashboard provides basic information about the cluster, license, and displays most important metrics.
 
-![Image](enterprise_cluster_dashboard.png)
+![Enterprise Cluster Dashboard](enterprise_cluster_dashboard.png)
 
 
 #### Cluster Overview Dashboard
