--- a/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
+++ b/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
@@ -24,7 +24,7 @@ Redis Explorer allows you to create the following dashboard over Grafana:
 
 #### Enterprise Clusters Dashboard 
 
-Enterprise Clusters dashboard provides basic information about the cluster, license, and displays most important metrics.
+The Enterprise Clusters dashboard provides basic information about the cluster, license, and displays most important metrics.
 
 ![Enterprise Cluster Dashboard](enterprise_cluster_dashboard.png)
 
