--- a/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
+++ b/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
@@ -31,7 +31,7 @@ The Enterprise Clusters dashboard provides basic information about the cluster, 
 
 #### Cluster Overview Dashboard
 
-Cluster Overview dashboard provides the most important information and metrics for the selected cluster.
+The Cluster Overview dashboard provides the most important information and metrics for the selected cluster.
 
 ![Image](cluster_overview_dashboard.png)
 
