--- a/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
+++ b/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
@@ -33,7 +33,7 @@ The Enterprise Clusters dashboard provides basic information about the cluster, 
 
 The Cluster Overview dashboard provides the most important information and metrics for the selected cluster.
 
-![Image](cluster_overview_dashboard.png)
+![The Cluster Overview Dashboard](cluster_overview_dashboard.png)
 
 
 #### Cluster Nodes Dashboard
