--- a/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
+++ b/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
@@ -40,7 +40,7 @@ The Cluster Overview dashboard provides the most important information and metri
 
 Cluster Nodes dashboard provides information and metrics for each node participating in the cluster.
 
-![Image](cluster_nodes_dashboard.png)
+![The Cluster Nodes dashboard](cluster_nodes_dashboard.png)
 
 
 
