--- a/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
+++ b/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
@@ -65,7 +65,7 @@ Cluster Databases dashboard provides information and metrics for each databases 
 
 ![My Image](tryfree1.png)
 
-![My Image](redis_enterprise_cluster.png)
+![Redis Enterprise Cluster](redis_enterprise_cluster.png)
 
 ### Step 2. Install Grafana
 
