--- a/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
+++ b/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
@@ -46,7 +46,7 @@ Cluster Nodes dashboard provides information and metrics for each node participa
 
 #### Cluster Databases Dashboard
 
-Cluster Databases dashboard provides information and metrics for each databases managed by cluster.
+The Cluster Databases dashboard provides information and metrics for each databases managed by cluster.
 
 ![Image](cluster_databases_dashboard.png)
 
