--- a/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
+++ b/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
@@ -48,7 +48,7 @@ Cluster Nodes dashboard provides information and metrics for each node participa
 
 The Cluster Databases dashboard provides information and metrics for each databases managed by cluster.
 
-![Image](cluster_databases_dashboard.png)
+![The Cluster databases dashboard](cluster_databases_dashboard.png)
 
 ### Getting Started
 
