--- a/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
+++ b/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
@@ -61,7 +61,7 @@ The Cluster Databases dashboard provides information and metrics for each databa
 
 ### Step 1. Setup Redis Enterprise Cluster
 
-[Follow these steps](/create/docker/) to setup Redis Enterprise cluster nodes
+[Follow these steps](/create/docker/) to setup Redis Enterprise cluster nodes.
 
 ![My Image](tryfree1.png)
 
