--- a/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
+++ b/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
@@ -52,7 +52,7 @@ The Cluster Databases dashboard provides information and metrics for each databa
 
 ### Getting Started
 
-### Pre-requisite
+### Pre-requisites
 
 - Grafana 8.0+ is required for Redis Explorer 2.X.
 - Grafana 7.1+ is required for Redis Explorer 1.X.
