--- a/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
+++ b/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
@@ -63,7 +63,7 @@ The Cluster Databases dashboard provides information and metrics for each databa
 
 [Follow these steps](/create/docker/) to setup Redis Enterprise cluster nodes.
 
-![My Image](tryfree1.png)
+![Set up Redis Enterprise](tryfree1.png)
 
 ![Redis Enterprise Cluster](redis_enterprise_cluster.png)
 
