--- a/docs/operate/orchestration/docker/index-docker.mdx
+++ b/docs/operate/orchestration/docker/index-docker.mdx
@@ -100,7 +100,7 @@ OK
 <TabItem value="Redis">
 
 
-### Pre-requisite
+### Pre-requisites
 
 Ensure that Docker is installed in your system. Follow [Docker's installation guide)[https://docs.docker.com/engine/install/] if you haven’t installed it yet.
 
