--- a/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
+++ b/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
@@ -104,7 +104,7 @@ Open `https://IP:3000` to access grafana. The default username/password is admin
 
 ### Step 6. Choose Redis Explorer in the sidebar
 
-Once you add the datasource, you should be able to choose the right option
+Once you add the datasource, you should be able to choose the right option:
 
 ![My Image](explorer_options.png)
 
