--- a/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
+++ b/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
@@ -99,7 +99,7 @@ Open `https://IP:3000` to access grafana. The default username/password is admin
 
 ### Step 5. Log in to Grafana
 
-![My Image](grafana.png)
+![Logging into Grafana](grafana.png)
 
 
 ### Step 6. Choose Redis Explorer in the sidebar
