--- a/docs/operate/orchestration/docker/index-docker.mdx
+++ b/docs/operate/orchestration/docker/index-docker.mdx
@@ -25,7 +25,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 Ensure that Docker is installed in your system.
 
-If you're new, refer https://docs.docker.com/docker-for-mac/install/ to install Docker on Mac. 
+If you're new, refer to [Docker's installation guide](https://docs.docker.com/docker-for-mac/install/) for Mac OS. 
 
 
 To pull and start the Redis Enterprise Software Docker container, run this docker run command in the terminal or command-line for your operating system.
