--- a/docs/operate/orchestration/docker/index-docker.mdx
+++ b/docs/operate/orchestration/docker/index-docker.mdx
@@ -82,7 +82,7 @@ You now have a Redis database!
 
 ### Step 5: Connecting using redis-cli 
 
-After you create the Redis database, you are ready to store data in your database. redis-cli is a built-in simple command-line tool to interact with Redis database. Run redis-cli, located in the /opt/redislabs/bin directory, to connect to port 12000 and store and retrieve a key in database1
+After you create the Redis database, you are ready to store data in your database. `redis-cli` is a built-in simple command-line tool to interact with Redis databases. Run `redis-cli`, located in the `/opt/redislabs/bin` directory, to connect to port 12000 and store and retrieve the value of a key in the database:
 
 ```
 $ docker exec -it rp bash
