Add Operate section

--- a/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
+++ b/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
@@ -106,15 +106,15 @@ Open `https://IP:3000` to access grafana. The default username/password is admin
 
 Once you add the datasource, you should be able to choose the right option:
 
-![My Image](explorer_options.png)
+![Explorer Options](explorer_options.png)
 
 ### Step 7. Getting the Redis Enterprise Cluster Overview
 
-![My Image](cluster_overview.png)
+![Redis Enterprise Cluster Overview](cluster_overview.png)
 
 ### Step 8. Displaying the Redis Enterprise Cluster Nodes
 
-![My Image](cluster_nodes.png)
+![Redis Enterprise Cluster Nodes](cluster_nodes.png)
 
 
 
