--- a/docs/operate/orchestration/index-orchestration.mdx
+++ b/docs/operate/orchestration/index-orchestration.mdx
@@ -7,7 +7,7 @@ slug: /operate/orchestration
 
 import RedisCard from '@site/src/theme/RedisCard';
 
-The following links provides you with the available options to connect your containerized workloads to Redis.
+The following links show you with the various ways to connect your containerized workloads to Redis.
 
 <div class="row">
     <div class="col">
