--- a/docs/operate/orchestration/kubernetes/index-kubernetes.mdx
+++ b/docs/operate/orchestration/kubernetes/index-kubernetes.mdx
@@ -9,7 +9,7 @@ slug: /operate/orchestration/kubernetes/
 import RedisCard from '@site/src/theme/RedisCard';
 
 
-The following links provide you with the available options to create a new Redis database on Kubernetes Platforms 
+The following links show you the various ways to create a new Redis database on Kubernetes Platforms 
 
 
 <div class="row">
