--- a/docs/operate/provisioning/azure-cache-terraform-private/index-azure-cache-terraform-private.mdx
+++ b/docs/operate/provisioning/azure-cache-terraform-private/index-azure-cache-terraform-private.mdx
@@ -5,18 +5,18 @@ sidebar_label: Azure Cache for Redis Enterprise using Terraform with Private Lin
 slug: /operate/provisioning/azure-cache-terraform-private
 ---
 
-Azure Private Link for Azure Cache for Redis provides private connectivity from a virtual network to your cache instance. This means that you can now use Azure Private Link to connect to an Azure Cache for Redis instance from your virtual network via a private endpoint, which is assigned a private IP address in a subnet within the virtual network.It simplifies the network architecture and secures the connection between endpoints in Azure by eliminating data exposure to the public internet. Private Link carries traffic privately, reducing your exposure to threats and helps you meet compliance standards.
+Azure Private Link for Azure Cache for Redis provides private connectivity from a virtual network to your cache instance. This means that you can now use Azure Private Link to connect to an Azure Cache for Redis instance from your virtual network via a private endpoint, which is assigned a private IP address in a subnet within the virtual network. It simplifies the network architecture and secures the connection between endpoints in Azure by eliminating data exposure to the public internet. Private Link carries traffic privately, reducing your exposure to threats and helps you meet compliance standards.
 
-Azure Resource Manager(a.k.a AzureRM) is the deployment and management service for Azure. It provides a management layer that enables you to create, update, and delete resources in your Azure account. You can use management features, like access control, locks, and tags, to secure and organize your resources after deployment. The "azurerm_redis_enterprise_cluster" is a resource that manages a Redis Enterprise cluster. This is a template to get started with the 'azurerm_redis_enterprise_cluster' resource available in the 'azurerm' provider with Terraform.
+Azure Resource Manager (a.k.a AzureRM) is the deployment and management service for Azure. It provides a management layer that enables you to create, update, and delete resources in your Azure account. You can use management features, like access control, locks, and tags, to secure and organize your resources after deployment. The "azurerm_redis_enterprise_cluster" is a resource that manages a Redis Enterprise cluster. This is a template to get started with the 'azurerm_redis_enterprise_cluster' resource available in the 'azurerm' provider with Terraform.
 
-### Prerequisite
+### Prerequisites
 
 1.  [Terraform](https://terraform.io)
 2.  [Azure CLI](https://docs.microsoft.com/en-us/cli/azure/install-azure-cli)
 
 ### Step 1. Getting Started
 
-Login in Azure using the Azure CLI
+Login in to Azure using the Azure CLI
 
 ```bash
 az login
@@ -44,7 +44,7 @@ terraform init
 >The output should include: ```Terraform has been successfully initialized```
 
 
-### Step 4: Modify the variables(optional)
+### Step 4: Modify the variables (optional)
 
 The default variables are setup to deploy the smallest 'E10' instance into the 'East US' region.
 Changes can be made by updating the ```variables.tf``` file.
