--- a/docs/operate/provisioning/index-provisioning.mdx
+++ b/docs/operate/provisioning/index-provisioning.mdx
@@ -9,7 +9,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 
 
-The following links provides you with the available options to automate delivery of Redis to your organization.
+The following links are a guide to the various options to automate delivery of Redis to your organization.
 
 <div class="row">
    <div class="col">
