--- a/docs/operate/orchestration/docker/index-docker.mdx
+++ b/docs/operate/orchestration/docker/index-docker.mdx
@@ -21,14 +21,14 @@ import RedisCard from '@site/src/theme/RedisCard';
   <TabItem value="Redis Enterprise" className="has-small-images">
 
 
-### Pre-requisite
+### Pre-requisites
 
 Ensure that Docker is installed in your system.
 
-If you're new, refer to [Docker's installation guide](https://docs.docker.com/docker-for-mac/install/) for Mac OS. 
+If you're new, refer to [Docker's installation guide](https://docs.docker.com/docker-for-mac/install/) to install Docker on Mac. 
 
 
-To pull and start the Redis Enterprise Software Docker container, run this docker run command in the terminal or command-line for your operating system.
+To pull and start the Redis Enterprise Software Docker container, run this `docker run` command in the terminal or command-line for your operating system.
 
 Note: On Windows, make sure Docker is configured to run Linux-based containers.
 
@@ -36,21 +36,21 @@ Note: On Windows, make sure Docker is configured to run Linux-based containers.
 docker run -d --cap-add sys_resource --name rp -p 8443:8443 -p 9443:9443 -p 12000:12000 redislabs/redis
 ```
 
-In the web browser on the host machine, go to https://localhost:8443 to see the Redis Enterprise Software web console.
+In the web browser on the host machine, go to `https://localhost:8443` to see the Redis Enterprise Software web console.
 
 ### Step 1: Click on “Setup”
 
 Click Setup to start the node configuration steps.
 
 
-![My Image](images/resoftware-1.png)
+![Setting up nodes](images/resoftware-1.png)
 
 
 ### Step 2:  Enter your preferred FQDN 
 
-In the Node Configuration settings, enter a cluster FQDN such as demo.redis.com. Then click Next button.
+In the Node Configuration settings, enter a cluster FQDN such as demo.redis.com. Then click the Next button.
 
-![My Image](images/resoftware-2.png)
+![Redis Enterprise Setup](images/resoftware-2.png)
 
 Enter your license key, if you have one. If not, click the Next button to use the trial version.
 
@@ -58,7 +58,7 @@ Enter your license key, if you have one. If not, click the Next button to use th
 
 Enter an email and password for the admin account for the web console.
 
-![My Image](images/resoftware-4.png)
+![Login credentials](images/resoftware-4.png)
 
 These credentials are also used for connections to the REST API. 
 Click OK to confirm that you are aware of the replacement of the HTTPS SSL/TLS certificate on the node, and proceed through the browser warning.
@@ -67,14 +67,14 @@ Click OK to confirm that you are aware of the replacement of the HTTPS SSL/TLS c
 
 ### Step 4:  Create a Database:
 
-Select “redis database” and the “single region” deployment, and click Next.
+Select “Redis database” and the “single region” deployment, and click Next.
 
-![My Image](images/resoftware-5.png)
+![Creating a database](images/resoftware-5.png)
 
 Enter a database name such as demodb and click Activate to create your database
 
 
-![My Image](images/resoftware-7.png)
+![Creating a database](images/resoftware-7.png)
 
 You now have a Redis database!
 
@@ -112,12 +112,12 @@ Execute the following command to run Redis container in the background in a “d
 $ docker run --name myredis -d redis
 ```
 
-where,
-myredis is the name of Docker container
--d represent running Redis in a background in a “detached” mode.
-redis is the name of Docker Image that it fetches from Docker Hub.
+where:
+- `myredis` is the name of Docker container
+`-d` representis running Redis in a background in a “detached” mode.
+- `redis` is the name of Docker Image that it fetches from Docker Hub.
 
-### Step 2: Verify if Redis container is running or not:
+### Step 2: Verify if the Redis container is running or not:
 
 ```
 $ docker ps
@@ -127,7 +127,7 @@ CONTAINER ID   IMAGE     COMMAND                  CREATED         STATUS        
 
 ### Step 3: Connect to your database
 
-The below CLI uses the first three alphanumeric character of Container ID  and opens up "sh" shell of Redis Docker container:
+The following uses the first three alphanumeric characters of your Container ID  and opens up `sh` shell of the Redis Docker container:
 
 ```
 $ docker exec -it 241 sh
@@ -136,34 +136,34 @@ $ docker exec -it 241 sh
 
 ### Step 4: Testing Redis container
 
-Execute the below command to test the Redis server:
+Execute the following command to test the Redis server:
 
 ```
 127.0.0.1:6379>ping
 PONG
 ```
 
-Please note: By default, Redis has 0-15 indexes for databases, you can change that number databases NUMBER in redis.conf.
+Please note: By default, Redis uses 0-15 as indexes for databases, you can change that number in `redis.conf`.
 
 ### Step 5: Running Redis container with Persistent Storage
 
-In order to enable persistence,  you have to pass the "appendonly" option as "yes" as shown in the below example:
+In order to enable persistence,  you should invoke the Docker container, passing `appendonly yes` option as shown below:
 
 ```
 $ docker run --name some-redis -d redis redis-server --appendonly yes
 ```
 
-If persistence is enabled, data is stored in the VOLUME /data, which can be used with --volumes-from some-volume-container or -v /docker/host/dir:/data 
+If persistence is enabled, data is stored in the volume `/data`, which can be used with `--volumes-from some-volume-container` or `-v /docker/host/dir:/data` 
 
  
 </TabItem>
   
 </Tabs>
 
-### Next Step
+### Next Steps
 
-- [Connect to Redis database using RedisInsight](/explore/redisinsight/)
-- [Connect to Redis database using Redis datasource for Grafana](/explore/redisdatasource/)
+- [Connect to a Redis database using RedisInsight](/explore/redisinsight/)
+- [Connect to a Redis database using Redis datasource for Grafana](/explore/redisdatasource/)
 
 ##
 
