Add Operate section

--- a/docs/operate/index-operate.mdx
+++ b/docs/operate/index-operate.mdx
@@ -12,7 +12,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 The following links demonstrate various ways to provision Redis and accelerate app deployment using Devops.
 
 <a href="https://redis.com/blog/why-devops-teams-love-redis-enterprise/">
-<img src="/img/logos/devopslogo.jpg" alt="devops logo" />
+<img src="/img/logos/devopslogo.jpg" alt="add devops logo" />
 </a>
 
 # Explore by Category
