Add Operate section

--- a/docs/operate/index-operate.mdx
+++ b/docs/operate/index-operate.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-operate
-title: Operating Your Redis Database
+title: Operate Your Redis Database
 sidebar_label: Overview
 slug: /operate
 ---
