--- a/docs/create/portainer/index-portainer.mdx
+++ b/docs/create/portainer/index-portainer.mdx
@@ -12,7 +12,7 @@ Redis is an in-memory data structure store, used as a distributed, in-memory key
 
 You can’t travel far in the modern software world without finding that you need an in-memory data store. Today, the answer to “Which data store?” is often Redis. Also today, the answer to “How to Redis?” can be Portainer.
 
-In this blog we'll take you through using Portainer to turn up Redis in three common scenarios.
+In this blog we'll take you through using Portainer to set up Redis in three common scenarios.
 
 ### Scenario 1: Kubernetes
 
