--- a/docs/create/portainer/index-portainer.mdx
+++ b/docs/create/portainer/index-portainer.mdx
@@ -32,7 +32,7 @@ In the navigation menu on the left, click **“Helm”**. If you haven’t alrea
 
 ![helm](images/redis2.png)
 
-As long as the Bitnami charts repository has been added, you should see a list of Charts on this page. Find **"Redis"** and click on it.
+Once the Bitnami charts repository has been added, you should see a list of Charts on this page. Find **"Redis"** and click on it.
 
 Note, you will see redis-cluster listed as an option. The redis-cluster Helm chart configures a six node cluster; three masters, and three slaves. The redis Helm chart we will use configures a much simpler three node cluster; one master, and two slaves. There are a number of other differences between these two Helm charts. For a complete list of differences, Bitnami has a good description [here](https://docs.bitnami.com/kubernetes/infrastructure/redis/get-started/compare-solutions/)
 
