--- a/docs/create/portainer/index-portainer.mdx
+++ b/docs/create/portainer/index-portainer.mdx
@@ -55,7 +55,7 @@ Note that what is deployed is a STATEFULSET application, which means it persists
 
 ![volumes](images/redis6.png)
 
-See that each pod has its own copy/replica of the DB content, and note that it defaults to 8GB size. If you need to change this, then its line 409 in the values file of the HELM deployment.
+See that each pod has its own copy/replica of the DB content, and note that it defaults to 8GB in size. If you need to change this, then its line 409 in the values file of the HELM deployment.
 
 ![change_volumes_size](images/redis7.png)
 
