--- a/docs/create/portainer/index-portainer.mdx
+++ b/docs/create/portainer/index-portainer.mdx
@@ -79,7 +79,7 @@ For the purposes of this demo, we will use a Portainer App Template to deploy Re
 Now that you know you are good to go,
 
 - Click "App Templates" in the navigation menu on the left.
-- Find and click on Redis Cluster
+- Find and click on Redis Cluster.
 
 ![redis-cluster](images/redis11.png)
 
