--- a/docs/create/portainer/index-portainer.mdx
+++ b/docs/create/portainer/index-portainer.mdx
@@ -93,7 +93,7 @@ You will be taken to the “Stacks list” page and will see the new stack named
 
 ![stack-info](images/redis13.png)
 
-To test, Expand one of the services that you see on the stack details page (above). Then click on the container’s “exec console” icon.
+To test, expand one of the services that you see on the stack details page (above). Then click on the container’s “exec console” icon.
 
 ![console-access-icon](images/redis14.png)
 
