--- a/docs/create/portainer/index-portainer.mdx
+++ b/docs/create/portainer/index-portainer.mdx
@@ -125,6 +125,6 @@ Sometimes I just want a Redis container, not a whole situation. Just a quick, un
 
 That’s it. You can test in the same way as before.
 
-![contaienr-container](images/redis19.png)
+![container-container](images/redis19.png)
 
 Three different scenarios - Three easy Redis deployments using Portainer
