Added Portainer author and featured image

--- a/docs/create/portainer/index-portainer.mdx
+++ b/docs/create/portainer/index-portainer.mdx
@@ -3,12 +3,16 @@ id: index-portainer
 title: Getting Started with Portainer and Redis
 sidebar_label: Redis using Portainer
 slug: /create/portainer
+authors: [ryan]
 ---
 
 
 
 
 Redis is an in-memory data structure store, used as a distributed, in-memory key–value database, cache and message broker, with optional durability. Redis supports different kinds of abstract data structures, such as strings, lists, maps, sets, sorted sets, HyperLogLogs, bitmaps, streams, and spatial indices. [~Wikipedia](https://en.wikipedia.org/wiki/Redis)
+
+![portainer and redis](images/portainer.png)
+
 
 You can’t travel far in the modern software world without finding that you need an in-memory data store. Today, the answer to “Which data store?” is often Redis. Also today, the answer to “How to Redis?” can be Portainer.
 
