--- a/docs/operate/index-operate.mdx
+++ b/docs/operate/index-operate.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-operate
-title: Operate Your Redis Database
+title: Operate Your Redis database
 sidebar_label: Overview
 slug: /operate
 ---
@@ -9,38 +9,39 @@ import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
-The following links demonstrate various ways to provision Redis and accelerate app deployment using Devops.
+The following links provides you with the available options to provision Redis and acceperate app deployment using Devops.
 
 <a href="https://redis.com/blog/why-devops-teams-love-redis-enterprise/">
-<img src="/img/logos/devopslogo.jpg" alt="devops logo" />
+<img src="/img/logos/devopslogo.png" alt="docusaurus mascot" />
 </a>
 
 # Explore by Category
 
 <div class="row">
-    <div class="col">
+    <div class="col continuous">
         <RedisCard
             title="Continuous Integration and Deployment"
             description="Embed Redis into your CI-CD Process"
+            preview="/img/logos/devops.png"
             page="/operate/continuous-integration-continuous-deployment"
             />
     </div>
- <div class="col">
+ <div class="col observability">
      <RedisCard
         title="Observability"
         description="Observe key indicators critical to operating Redis"
         page="/operate/observability"
         />
   </div>
- <div class="col">
+ <div class="col provisioning">
      <RedisCard
         title="Provisioning"
-        description="Automate deployment and delivery of Redis to your organization"
+        description="Automate delivery of Redis to your org"
         page="/operate/provisioning"
         />
   </div>
 
- <div class="col">
+ <div class="col orchestration">
         <RedisCard
             title="Orchestration"
             description="Connect your containerized workloads to Redis"
