Minor formatting change

--- a/docs/create/portainer/index-portainer.mdx
+++ b/docs/create/portainer/index-portainer.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-portainer
 title: Getting Started with Portainer and Redis
-sidebar_label: Redis using Portainer
+sidebar_label: Getting Started with Portainer and Redis
 slug: /create/portainer
 authors: [ryan]
 ---
