--- a/docs/operate/index-operate.mdx
+++ b/docs/operate/index-operate.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-operate
-title: Operate Your Redis database
+title: Operate Your Redis Database
 sidebar_label: Overview
 slug: /operate
 ---
