✏️ FIX: typo on line 6

--- a/docs/explore/import/index-import.mdx
+++ b/docs/explore/import/index-import.mdx
@@ -13,7 +13,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 Redis offers multiple ways to import data into a database; from an file, an script or from an existing Redis database.
 
 
-## Import using `reds-cli` script
+## Import using `redis-cli` script
 
 1. Create a simple file `users.redis` with all the commands you want to run
 
