--- a/docs/operate/continuous-integration-continuous-deployment/argocd/index-argocd.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/argocd/index-argocd.mdx
@@ -42,7 +42,7 @@ Argo CD watches the changes in the cluster as well, which becomes important if s
 
 - It also provides automation and traceability via GitOps workflow with a web UI for visualizing Kubernetes resources.
 
-- Argo CD defines Kubernetes manifests in different ways: it supports Kubernetes YAML files, Helm Charts, Kustomize, and other template files that generate Kubernetes manifests. \
+- Argo CD defines Kubernetes manifests in different ways: it supports Kubernetes YAML files, Helm Charts, Kustomize, and other template files that generate Kubernetes manifests. 
 
 - Argo CD also has a command-line interface application, a Grafana metrics dashboard, and audit trails for application events and API calls.
 
